# pi_calculator

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: FindGMP.cmake
include/: checkpoint.h  pi.h  pi_ref.h
src/: checkpoint.c  pi.c
